# libreblox-roblox

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
applications/rcc-service/: CMakeLists.txt
applications/rcc-service/include/: CrossPlatformEvent.h  DummyWindow.h  OperationalSecurity.h  stdafx.h  thumbnailgenerator.h
applications/rcc-service/src/: DummyWindow.cpp  OperationalSecurity.cpp  RCCService.cpp  RCCServiceHttpImpl.cpp  ThumbnailGenerator.cpp
applications/sdl-client/: CMakeLists.txt
applications/sdl-client/include/: Application.h  Document.h  FunctionMarshaller.h  GameVerbs.h  InitializationError.h  RenderJob.h  UserInput.h  View.h  stdafx.h
applications/sdl-client/resources/: AppSettings.xml
applications/sdl-client/src/: Application.cpp  Crypt.cpp  Document.cpp  FunctionMarshaller.cpp  GameVerbs.cpp  RenderJob.cpp  UserInput.cpp  View.cpp  main.cpp
applications/studio/: AddEmulationDeviceDialog.cpp  AppleCrashReporter.cpp  AuthenticationHelper.cpp  AuthoringSettings.cpp  AutoSaveDialog.cpp  CMakeLists.txt  CSGOperations.cpp  CSGOperations.h  CloudEditAdornable.cpp  CloudEditAdornable.h  CommonInsertWidget.cpp  CommonInsertWidget.h  DebuggerClient.cpp  DebuggerClient.h  DebuggerWidgets.cpp  DebuggerWidgets.h  DocDockManager.h  DocDockWidget.cpp  DocDockWidget.h  DocTabManager.cpp  DocTabManager.h  FindDialog.cpp  FindDialog.h  FunctionMarshaller.cpp  GalleryItemColor.cpp  GalleryItemColor.h  InsertObjectListWidget.cpp  InsertObjectListWidget.h  InsertObjectListWidgetItem.cpp  InsertObjectListWidgetItem.h  InsertServiceDialog.cpp  InsertServiceDialog.h  KeepSavedChangesDialog.cpp  LuaSourceBuffer.cpp  LuaSourceBuffer.h  ManageEmulationDeviceDialog.cpp  MobileDevelopmentDeployer.cpp  PlayersDataManager.cpp  PlayersDataManager.h  PropertyItems.cpp  (+107 more)
applications/studio/filewatcher/: FileWatcher.cpp  FileWatcherLinux.cpp  FileWatcherWin32.cpp
engine/base/: CMakeLists.txt
engine/base/include/: FastLog.h  RbxFormat.h  RbxHash.h  RbxPlatform.h
engine/base/include/microprofile/: microprofile.h
engine/base/include/rbx/: BaldPtr.h  Boost.hpp  CEvent.h  Crypt.h  Debug.h  Log.h  Memory.h  ProcessPerfCounter.h  RunningAverage.h  SystemUtil.h  TaskScheduler.h  atomic.h  intrusive_ptr_target.h  intrusive_weak_ptr.h  object_pool.h  signal.h  threadsafe.h
engine/base/include/util/: RegistryUtil.h
engine/base/src/: FastLog.cpp  FastLogStream.cpp  RbxAssert.cpp  RbxFormat.cpp
engine/base/src/rbx/: Crypt.cpp  Memory.cpp  ProcessPerfCounter.cpp  Profiler.cpp  TaskScheduler.Job.cpp  TaskScheduler.Thread.cpp  TaskScheduler.cpp  ThreadSafe.cpp  Time.cpp  boost.cpp
engine/base/src/util/: Debug.cpp  Log.cpp  RegistryUtil.cpp
engine/csg/: CMakeLists.txt
engine/csg/include/: CSGKernel.h
engine/csg/src/: CSGKernel.cpp
engine/network/: CMakeLists.txt
engine/network/include/network/: BoostAppend.h  ChatFilter.h  Client.h  ClientReplicator.h  CompactCFrame.h  Compressor.h  ConcurrentRakPeer.h  CrashReporter.h  Dictionary.h  ErrorCompPhysicsSender.h  ErrorCompPhysicsSender2.h  GameConfigurer.h  GuidRegistryService.h  Item.h  Marker.h  MechanismItem.h  MovementHistoryJob.h  NetPmc.h  NetworkClusterPacketCache.h  NetworkFilter.h  NetworkOwner.h  NetworkOwnerJob.h  NetworkPacketCache.h  NetworkSettings.h  Peer.h  PersistentDataStore.h  PhysicsReceiver.h  PhysicsSender.h  Player.h  Players.h  PropertySynchronization.h  RakNetFast.h  Replicator.EventInvocationItem.h  Replicator.GCJob.h  Replicator.HashItem.h  Replicator.JoinDataItem.h  Replicator.PingJob.h  Replicator.ProcessPacketsJob.h  Replicator.SendDataJob.h  Replicator.StatsItem.h  (+10 more)
engine/network/include/raknet/: RakNetSocket.h  RakString.h  WindowsIncludes.h  rdlmalloc.h
engine/network/src/: API.cpp  BoostAppend.cpp  ChatFilter.cpp  Client.cpp  ClientReplicator.cpp  ClusterUpdateBuffer.cpp  Compressor.cpp  ConcurrentRakPeer.cpp  CrashReporter.cpp  CrashReporter_linux.cpp  Dictionary.cpp  DirectPhysicsReceiver.cpp  ErrorCompPhysicsSender.cpp  ErrorCompPhysicsSender2.cpp  GameConfigurer.cpp  GamePerfMonitor.cpp  InterpolatingPhysicsReceiver.cpp  Item.cpp  Marker.cpp  MechanismItem.cpp  MovementHistoryJob.cpp  NetPmc.cpp  NetworkClusterPacketCache.cpp  NetworkFilter.cpp  NetworkOwnerJob.cpp  NetworkSettings.cpp  Peer.cpp  PersistentDataStore.cpp  PhysicsReceiver.cpp  PhysicsSender.cpp  Player.cpp  Players.cpp  Replicator.ChangePropertyItem.cpp  Replicator.DeleteInstanceItem.cpp  Replicator.EventInvocationItem.cpp  Replicator.GCJob.cpp  Replicator.HashItem.cpp  Replicator.NewInstanceItem.cpp  Replicator.PingBackItem.cpp  Replicator.PingItem.cpp  (+12 more)
engine/network/src/raknet/: FileList.cpp  GetTime.cpp  RakPeer.cpp  RakString.cpp  Rand.cpp
engine/rendering/app-draw/: CMakeLists.txt
engine/rendering/app-draw/src/: Draw.cpp  DrawAdorn.cpp  HitTest.cpp
engine/rendering/g3d/: CMakeLists.txt
tests/: CMakeLists.txt
tests/App.UnitTest/: App.UnitTest.cpp  AutowedgeTest.cpp  Base64BinaryStreamTest.cpp  CMakeLists.txt  ChatTests.cpp  ClusterChangeHistoryTest.cpp  ClusterDeprecatedPropertyTest.cpp  ClusterReplicationTest.cpp  CustomEvents.cpp  G3D.cpp  HTTPTest.cpp  HeapValueTest.cpp  HumanoidTest.cpp  Instance.cpp  LogServiceTest.cpp  LuaDebugger.cpp  LuaReflection.cpp  LuaSandbox.cpp  LuaYieldingTest.cpp  MD5.cpp  MemoryTests.cpp  ModuleScriptTest.cpp  Network.cpp  NetworkSecurity.cpp  RakNet.cpp  RaycastTest.cpp  ReflectionTest.cpp  RemoteSignal.cpp  ReplicatorGcJobTest.cpp  ReplicatorStreamJobTest.cpp  SelectionTest.cpp  SettingsTest.cpp  SpatialHashTest.cpp  SpatialRegionTest.cpp  StreamRegionTest.cpp  ThreadPoolTest.cpp  ToolTest.cpp  VoxelCellUtilTest.cpp  VoxelCellUtilV1Deprecated.h  WebParserTest.cpp  (+2 more)
tests/Base.UnitTest/: CEvent.cpp  CMakeLists.txt  Crypt.cpp  Time.cpp  atomic.cpp  intrusive_ptr.cpp  make_shared.cpp
tests/RbxTestHooks/: RbxTestHooks.vcxproj
tests/RobloxTest/: CMakeLists.txt  Tests.cpp  main.cpp
tools/core-script-converter/: CMakeLists.txt  cscmain.cpp
tools/core-script-converter/tool/: replace_luagen.cmake  rsc.config
(+1304 files in other folders)
