include(Base)

include_directories(include)

# TODO: can we put this somewhere else? if so 
# have it in one single place and remove it from each file we have it in currently
set(CLIENT_SHARED_DIR "${CMAKE_SOURCE_DIR}/engine/client/shared")

if(ANDROID)
    list(APPEND HEADERS include/rbx/Android/ifaddrs.h)

    list(APPEND SOURCES src/rbx/Android/ifaddrs.c)
    list(APPEND SOURCES src/rbx/Android/SystemUtil.cpp)
elseif(WIN32)
    list(APPEND SOURCES src/rbx/Win/SystemUtil.cpp)
    list(APPEND SOURCES src/util/RegistryUtil.cpp)
elseif(APPLE)
    list(APPEND SOURCES src/rbx/Darwin/SystemUtil.cpp)
elseif(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    list(APPEND SOURCES src/rbx/Unix/SystemUtil.cpp)
endif(ANDROID)
# cross platform cryptography
list(APPEND SOURCES src/rbx/Crypt.cpp)

list(APPEND HEADERS include/HardwareInfo.h)
list(APPEND HEADERS include/RbxFormat.h)
list(APPEND HEADERS include/RbxPlatform.h)
list(APPEND HEADERS include/RbxHash.h)
list(APPEND HEADERS include/RbxBase.h)
list(APPEND HEADERS include/rbx/ProcessPerfCounter.h)
list(APPEND HEADERS include/rbx/object_pool.h)
list(APPEND HEADERS include/rbx/signal.h)
list(APPEND HEADERS include/rbx/RbxDbgInfo.h)
list(APPEND HEADERS include/rbx/RbxStrings.h)
list(APPEND HEADERS include/rbx/CEvent.h)
list(APPEND HEADERS include/rbx/Tasks/Coordinator.h)
list(APPEND HEADERS include/rbx/threadsafe.h)
list(APPEND HEADERS include/rbx/DenseHash.h)
list(APPEND HEADERS include/rbx/GlobalVectorItem.h)
list(APPEND HEADERS include/rbx/TaskScheduler.Job.h)
list(APPEND HEADERS include/rbx/RunningAverage.h)
list(APPEND HEADERS include/rbx/TaskScheduler.h)
list(APPEND HEADERS include/rbx/Debug.h)
list(APPEND HEADERS include/rbx/atomic.h)
list(APPEND HEADERS include/rbx/intrusive_weak_ptr.h)
list(APPEND HEADERS include/rbx/Intrusive/Set.h)
list(APPEND HEADERS include/rbx/rbxTime.h)
list(APPEND HEADERS include/rbx/BaldPtr.h)
list(APPEND HEADERS include/rbx/make_shared.h)
list(APPEND HEADERS include/rbx/Memory.h)
list(APPEND HEADERS include/rbx/Log.h)
list(APPEND HEADERS include/rbx/SystemUtil.h)
list(APPEND HEADERS include/rbx/callable.h)
list(APPEND HEADERS include/rbx/MathUtil.h)
list(APPEND HEADERS include/rbx/intrusive_ptr_target.h)
list(APPEND HEADERS include/rbx/Declarations.h)
list(APPEND HEADERS include/rbx/Crypt.h)
list(APPEND HEADERS include/rbx/Nil.h)
list(APPEND HEADERS include/rbx/trie.h)
list(APPEND HEADERS include/util/RegistryUtil.h)
list(APPEND HEADERS include/util/ublas_ext.h)
list(APPEND HEADERS include/util/stringbuffer.h)
list(APPEND HEADERS include/util/SafeToLower.h)
list(APPEND HEADERS include/util/ScopedSingleton.h)
list(APPEND HEADERS include/SelectState.h)
list(APPEND HEADERS include/CPUCount.h)
list(APPEND HEADERS include/RbxAssert.h)

list(APPEND SOURCES ${CLIENT_SHARED_DIR}/Mobile/CookiesEngine.cpp)
list(APPEND SOURCES ${CLIENT_SHARED_DIR}/SimpleJSON.cpp)
list(APPEND SOURCES ${CLIENT_SHARED_DIR}/format_string.cpp)

list(APPEND SOURCES src/cpucount.cpp)
list(APPEND SOURCES src/RbxAssert.cpp)
list(APPEND SOURCES src/RbxFormat.cpp)

list(APPEND SOURCES src/rbx/MathUtil.cpp)
list(APPEND SOURCES src/rbx/boost.cpp)
list(APPEND SOURCES src/rbx/CEvent.cpp)
list(APPEND SOURCES src/rbx/Memory.cpp)
list(APPEND SOURCES src/rbx/ProcessPerfCounter.cpp)
list(APPEND SOURCES src/rbx/Profiler.cpp)
list(APPEND SOURCES src/rbx/Signal.cpp)
list(APPEND SOURCES src/rbx/TaskScheduler.cpp)
list(APPEND SOURCES src/rbx/TaskScheduler.Job.cpp)
list(APPEND SOURCES src/rbx/TaskScheduler.Thread.cpp)
list(APPEND SOURCES src/rbx/ThreadSafe.cpp)
list(APPEND SOURCES src/rbx/Time.cpp)
list(APPEND SOURCES src/rbx/RbxDbgInfo.cpp)

list(APPEND SOURCES src/rbx/Tasks/Coordinator.cpp)

list(APPEND SOURCES src/util/Debug.cpp)
list(APPEND SOURCES src/util/Log.cpp)
list(APPEND SOURCES src/util/RbxCrash.cpp)
list(APPEND SOURCES src/util/StreamHelpers.cpp)

list(APPEND HEADERS include/FastLog.h)
list(APPEND HEADERS include/FastLogStream.h)

list(APPEND SOURCES src/FastLog.cpp)
list(APPEND SOURCES src/FastLogStream.cpp)


if(DEFINED RBX_CONFIG)
    set(TARGET_NAME Base_${RBX_CONFIG})
else()
    set(TARGET_NAME Base)
endif()

add_library(${TARGET_NAME} OBJECT ${SOURCES} ${HEADERS})
