include(App)
include(Rendering)
include(Network)
include(ClientShared)

if(DEFINED RBX_CONFIG)
    set(TARGET_NAME Network_${RBX_CONFIG})
else()
    set(TARGET_NAME Network)
endif()

file(GLOB_RECURSE SOURCES src/raknet/*.cpp)

if (UNIX)
    list(APPEND SOURCES src/CrashReporter_linux.cpp)
elseif(WIN32)
    list(APPEND SOURCES src/CrashReporter.cpp)
endif()

list(APPEND HEADERS include/network/BoostAppend.h)
list(APPEND HEADERS include/network/Client.h)
list(APPEND HEADERS include/network/ClientReplicator.h)
list(APPEND HEADERS include/network/ClusterUpdateBuffer.h)
list(APPEND HEADERS include/network/Compressor.h)
list(APPEND HEADERS include/network/ConcurrentRakPeer.h)
list(APPEND HEADERS include/network/DataBlockEncryptor.h)
list(APPEND HEADERS include/network/Dictionary.h)
list(APPEND HEADERS include/network/DirectPhysicsReceiver.h)
list(APPEND HEADERS include/network/ErrorCompPhysicsSender.h)
list(APPEND HEADERS include/network/ErrorCompPhysicsSender2.h)
list(APPEND HEADERS include/network/GamePerfMonitor.h)
list(APPEND HEADERS include/network/GuidRegistryService.h)
list(APPEND HEADERS include/network/api.h)
list(APPEND HEADERS include/network/ChatFilter.h)
list(APPEND HEADERS include/network/CompactCFrame.h)
list(APPEND HEADERS include/network/CrashReporter.h)
list(APPEND HEADERS include/network/CrispProxy.h)
list(APPEND HEADERS include/network/GameConfigurer.h)
list(APPEND HEADERS include/network/NetworkClusterPacketCache.h)
list(APPEND HEADERS include/network/NetworkOwner.h)
list(APPEND HEADERS include/network/NetworkPacketCache.h)
list(APPEND HEADERS include/network/Player.h)
list(APPEND HEADERS include/network/Players.h)
list(APPEND HEADERS include/network/WebChatFilter.h)
list(APPEND HEADERS include/network/InterpolatingPhysicsReceiver.h)
list(APPEND HEADERS include/network/Item.h)
list(APPEND HEADERS include/network/Marker.h)
list(APPEND HEADERS include/network/MechanismItem.h)
list(APPEND HEADERS include/network/MovementHistoryJob.h)
list(APPEND HEADERS include/network/NetworkFilter.h)
list(APPEND HEADERS include/network/NetworkOwnerJob.h)
list(APPEND HEADERS include/network/NetworkProfiler.h)
list(APPEND HEADERS include/network/NetworkSettings.h)
list(APPEND HEADERS include/network/PacketIds.h)
list(APPEND HEADERS include/network/Peer.h)
list(APPEND HEADERS include/network/PersistentDataStore.h)
list(APPEND HEADERS include/network/PhysicsReceiver.h)
list(APPEND HEADERS include/network/PhysicsSender.h)
list(APPEND HEADERS include/network/PropertySynchronization.h)
list(APPEND HEADERS include/network/Replicator.ChangePropertyItem.h)
list(APPEND HEADERS include/network/Replicator.DeleteInstanceItem.h)
list(APPEND HEADERS include/network/Replicator.EventInvocationItem.h)
list(APPEND HEADERS include/network/Replicator.GCJob.h)
list(APPEND HEADERS include/network/Replicator.HashItem.h)
list(APPEND HEADERS include/network/Replicator.h)
list(APPEND HEADERS include/network/Replicator.ItemSender.h)
list(APPEND HEADERS include/network/Replicator.JoinDataItem.h)
list(APPEND HEADERS include/network/Replicator.MarkerItem.h)
list(APPEND HEADERS include/network/Replicator.NewInstanceItem.h)
list(APPEND HEADERS include/network/Replicator.PingBackItem.h)
list(APPEND HEADERS include/network/Replicator.PingItem.h)
list(APPEND HEADERS include/network/Replicator.PingJob.h)
list(APPEND HEADERS include/network/Replicator.ProcessPacketsJob.h)
list(APPEND HEADERS include/network/Replicator.ReferencePropertyChangedItem.h)
list(APPEND HEADERS include/network/Replicator.RockyItem.h)
list(APPEND HEADERS include/network/Replicator.SendDataJob.h)
list(APPEND HEADERS include/network/Replicator.StatsItem.h)
list(APPEND HEADERS include/network/Replicator.StreamJob.h)
list(APPEND HEADERS include/network/Replicator.TagItem.h)
list(APPEND HEADERS include/network/ReplicatorStats.h)
list(APPEND HEADERS include/network/Rijndael-Boxes.h)
list(APPEND HEADERS include/network/Rijndael.h)
list(APPEND HEADERS include/network/RoundRobinPhysicsSender.h)
list(APPEND HEADERS include/network/Server.h)
list(APPEND HEADERS include/network/ServerReplicator.h)
list(APPEND HEADERS include/network/Streaming.h)
list(APPEND HEADERS include/network/StreamingUtil.h)
list(APPEND HEADERS include/network/TopNErrorsPhysicsSender.h)
list(APPEND HEADERS include/network/Util.h)


list(APPEND SOURCES src/API.cpp)
list(APPEND SOURCES src/BoostAppend.cpp)
list(APPEND SOURCES src/ChatFilter.cpp)
list(APPEND SOURCES src/Client.cpp)
list(APPEND SOURCES src/ClientReplicator.cpp)
list(APPEND SOURCES src/ClusterUpdateBuffer.cpp)
list(APPEND SOURCES src/Compressor.cpp)
list(APPEND SOURCES src/ConcurrentRakPeer.cpp)
list(APPEND SOURCES src/DataBlockEncryptor.cpp)
list(APPEND SOURCES src/Dictionary.cpp)
list(APPEND SOURCES src/DirectPhysicsReceiver.cpp)
list(APPEND SOURCES src/ErrorCompPhysicsSender2.cpp)
list(APPEND SOURCES src/ErrorCompPhysicsSender.cpp)
list(APPEND SOURCES src/GameConfigurer.cpp)
list(APPEND SOURCES src/GamePerfMonitor.cpp)
list(APPEND SOURCES src/GuidRegistryService.cpp)
list(APPEND SOURCES src/InterpolatingPhysicsReceiver.cpp)
list(APPEND SOURCES src/Item.cpp)
list(APPEND SOURCES src/Marker.cpp)
list(APPEND SOURCES src/MechanismItem.cpp)
list(APPEND SOURCES src/MovementHistoryJob.cpp)
list(APPEND SOURCES src/NetworkClusterPacketCache.cpp)
list(APPEND SOURCES src/NetworkFilter.cpp)
list(APPEND SOURCES src/NetworkOwnerJob.cpp)
list(APPEND SOURCES src/NetworkPacketCache.cpp)
list(APPEND SOURCES src/NetworkProfiler.cpp)
list(APPEND SOURCES src/NetworkSettings.cpp)
list(APPEND SOURCES src/Peer.cpp)
list(APPEND SOURCES src/PersistentDataStore.cpp)
list(APPEND SOURCES src/PhysicsReceiver.cpp)
list(APPEND SOURCES src/PhysicsSender.cpp)
list(APPEND SOURCES src/Player.cpp)
list(APPEND SOURCES src/Players.cpp)
list(APPEND SOURCES src/Replicator.ChangePropertyItem.cpp)
list(APPEND SOURCES src/Replicator.cpp)
list(APPEND SOURCES src/Replicator.DeleteInstanceItem.cpp)
list(APPEND SOURCES src/Replicator.EventInvocationItem.cpp)
list(APPEND SOURCES src/Replicator.GCJob.cpp)
list(APPEND SOURCES src/Replicator.HashItem.cpp)
list(APPEND SOURCES src/Replicator.ItemSender.cpp)
list(APPEND SOURCES src/Replicator.MarkerItem.cpp)
list(APPEND SOURCES src/Replicator.PingBackItem.cpp)
list(APPEND SOURCES src/Replicator.PingItem.cpp)
list(APPEND SOURCES src/Replicator.ReferencePropertyChangedItem.cpp)
list(APPEND SOURCES src/Replicator.RockyItem.cpp)
list(APPEND SOURCES src/Replicator.TagItem.cpp)
list(APPEND SOURCES src/Replicator.JoinDataItem.cpp)
list(APPEND SOURCES src/Replicator.NewInstanceItem.cpp)
list(APPEND SOURCES src/ReplicatorStats.cpp)
list(APPEND SOURCES src/Replicator.StatsItem.cpp)
list(APPEND SOURCES src/Replicator.StreamJob.cpp)
list(APPEND SOURCES src/rijndael.cpp)
list(APPEND SOURCES src/RoundRobinPhysicsSender.cpp)
list(APPEND SOURCES src/Server.cpp)
list(APPEND SOURCES src/ServerReplicator.cpp)
list(APPEND SOURCES src/Streaming.cpp)
list(APPEND SOURCES src/TopNErrorsPhysicsSender.cpp)
list(APPEND SOURCES src/Util.cpp)
list(APPEND SOURCES src/WebChatFilter.cpp)

list(APPEND SOURCES src/NetPmc.cpp)

add_library(${TARGET_NAME} OBJECT ${SOURCES} ${HEADERS})
target_link_libraries(${TARGET_NAME} PRIVATE
    "$<$<CONFIG:Release>:FMOD::fmod>"
    "$<$<NOT:$<CONFIG:Release>>:FMOD::fmodL>"
)
